# rtl_433_webui

./: CMakeLists.txt  README.md  config.example.json
.github/workflows/: build.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/composables/: useWebSocket.js
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: Dashboard.vue  LiveData.vue  Settings.vue  SignalLog.vue
server/: CMakeLists.txt  embed_generator.py  main.cpp  rtl433_glue.c  rtl433_glue.h  rtl433_manager.cpp  rtl433_manager.hpp  server.cpp  server.hpp
toolchain/: petalinux-arm.cmake
